--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -45,12 +45,24 @@ import "../styles/global.css";
   src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
 ></script>
 
-<!-- Neue Power font -->
-<link href="https://fonts.cdnfonts.com/css/neue-power" rel="stylesheet" />
-<!-- Manrope font -->
-<link href="https://fonts.cdnfonts.com/css/public-sans" rel="stylesheet">
+<!--
+
+https://rsms.me/inter/
+______________________________________________________________________
+//Using Inter is as easy as downloading & installing the font files.
+//If you're making a web thing, you can use the following HTML and CSS:
+______________________________________________________________________
+-->
+<link rel="preconnect" href="https://rsms.me/" />
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 
 <!---- Alpine  -->
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
+<!-- Analytics   -->
 
-<script async defer data-website-id="1723e72e-f799-4e0c-9dfe-6593bf7ca76e" src="https://stats.andreuzza.com/umami.js"></script>
+<script
+  async
+  defer
+  data-website-id="1723e72e-f799-4e0c-9dfe-6593bf7ca76e"
+  src="https://stats.andreuzza.com/umami.js"
+></script>
