--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -5,7 +5,7 @@
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="text-white xl:col-span-3">
         <span class="text-lg font-semibold lg:text-2xl italic">Astro SaaS</span>
-        <p class="lg:w-1/4 mt-2 text-sm text-gray-400">
+        <p class="lg:w-1/4 mt-2 text-sm text-slate-400">
           <span class="mt-6 font-normal">
             Digital resources for digital designers and web developers by
             Michael Andreuzza
@@ -15,42 +15,44 @@
       <div class="grid grid-cols-2 gap-8 mt-12 lg:mt-24 xl:col-span-3">
         <div class="md:grid md:grid-cols-2 md:gap-8">
           <div>
-            <h3 class="text-xl text-white">Navigation</h3>
+            <h3 class="text-xl text-white">All pages</h3>
             <ul role="list" class="mt-4 space-y-2">
               <li>
-                <a href="/h" class="text-sm text-gray-400 hover:text-white">
+                <a href="/h" class="text-sm text-slate-400 hover:text-white">
                   Home
                 </a>
               </li>
 
               <li>
-                <a href="/faq" class="text-sm text-gray-400 hover:text-white">
+                <a href="/faq" class="text-sm text-slate-400 hover:text-white">
                   FAQ
                 </a>
               </li>
               <li>
-                <a href="/terms" class="text-sm text-gray-400 hover:text-white">
+                <a
+                  href="/terms"
+                  class="text-sm text-slate-400 hover:text-white">
                   Terms
                 </a>
               </li>
               <li>
                 <a
                   href="/privacy"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   Privacy
                 </a>
               </li>
               <li>
                 <a
                   href="/signup"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   Sign up
                 </a>
               </li>
               <li>
                 <a
                   href="/signup"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   Sign In
                 </a>
               </li>
@@ -62,14 +64,14 @@
               <li>
                 <a
                   href="https://www.unwrapped.design"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   Unwrapped
                 </a>
               </li>
               <li>
                 <a
                   href="https://github.com/michael-andreuzza/astrosaas"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   GitHub repo
                 </a>
               </li>
@@ -78,13 +80,13 @@
         </div>
         <div class="md:grid md:grid-cols-2 md:gap-8">
           <div>
-            <h3 class="text-xl text-white">Stay updated</h3>
+            <h3 class="text-xl text-white">More themes</h3>
             <ul role="list" class="mt-4 space-y-2">
               <li>
                 <a
-                  href="https://astro.build/"
-                  class="text-sm text-gray-400 hover:text-white">
-                  Astro
+                  href="https://lexingtonthemes.com/"
+                  class="text-sm text-slate-400 hover:text-white">
+                  Lexington Themes
                 </a>
               </li>
             </ul>
@@ -95,21 +97,21 @@
               <li>
                 <a
                   href="https://twitter.com/unwrappedHQ"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   @unwrappedHQ
                 </a>
               </li>
               <li>
                 <a
                   href="https://twitter.com/Mike_Andreuzza"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   @Mike_Andreuzza
                 </a>
               </li>
               <li>
                 <a
                   href="https://dribbble.com/MichaelAndreuzza.html"
-                  class="text-sm text-gray-400 hover:text-white">
+                  class="text-sm text-slate-400 hover:text-white">
                   Dribbble
                 </a>
               </li>
@@ -127,13 +129,13 @@
       <div class="flex justify-center space-x-6 md:order-2">
         <a
           href="https://twitter.com/mike_andreuzza"
-          class="p-3 text-sm text-gray-400 transition duration-500 ease-in-out transform hover:text-white">
+          class="p-3 text-sm text-slate-400 transition duration-500 ease-in-out transform hover:text-white">
           <span class=""> @Mike_Andreuzza</span>
         </a>
       </div>
       <div class="mt-8 md:mt-0 md:order-1">
         <p class="text-center">
-          <span class="mx-auto mt-2 text-sm text-gray-400">
+          <span class="mx-auto mt-2 text-sm text-slate-400">
             By Michael Anddeuzza
           </span>
         </p>
