--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -1,8 +1,8 @@
 <section class="bg-white border-b border-black/5">
-  <div class="w-full mx-auto md:px-12 px-8 max-w-7xl">
+  <div class="w-full mx-auto md:px-12 px-8 max-w-7xl lg:px-16">
     <div
       x-data="{ open: false }"
-      class="relative flex flex-col w-full p-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
+      class="relative flex flex-col w-full py-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6">
       <div class="flex flex-row items-center justify-between lg:justify-start">
         <a href="/" class="lg:pr-8 text-black inline-flex items-center gap-3">
           <svg
@@ -171,7 +171,7 @@
         </a>
         <button
           @click="open = !open"
-          class="inline-flex items-center justify-center p-2 text-gray-400 hover:text-black focus:outline-none focus:text-black lg:hidden">
+          class="inline-flex items-center justify-center p-2 text-slate-400 hover:text-black focus:outline-none focus:text-black lg:hidden">
           <svg
             class="w-6 h-6"
             stroke="currentColor"
@@ -220,7 +220,7 @@
           </a>
           <a
             href="/login"
-            class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-black bg-gray-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-gray-50 active:bg-gray-200 active:text-accent-400 focus-visible:outline-black">
+            class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-black bg-slate-100 rounded-lg group focus:outline-none focus-visible:outline-2 focus-visible:outline-offset-2 hover:bg-slate-50 active:bg-slate-200 active:text-accent-400 focus-visible:outline-black">
             Log in
           </a>
         </div>
