--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -1,27 +1,236 @@
-<section class="bg-gray-100">
+<section class="bg-slate-100">
   <div
-    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-20">
-    <div class="mx-auto md:text-center">
-      <div class="flex justify-center col-span-1 px-8">
-        <img alt="logo" class="max-h-12" src="/Stripe.svg" />
-      </div><h2
-        class="font-extrabold mt-8 text-black lg:text-7xl text-4xl font-display">
-        Astrosaas is loved all around SaaS and it wont leave you dissapointed
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
+    <div class="max-w-2xl mx-auto md:text-center">
+      <h2 class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
+        Astrosaas is very popular!
       </h2>
-    </div><div class="mx-auto max-w-2xl pt-12">
-      <div class="text-center">
-        <img
-          alt=""
-          class="mx-auto mt-6 h-10 lg:h-20 lg:w-20 object-cover rounded-full w-10 border-2 border-accent-400"
-          src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
-        /><div class="mt-4 justify-center space-y-4">
-          <p class="text-gray-500 text-sm font-medium">
-            Sam Samuel, Lead marketing specialist - <span
-              class="font-medium text-accent-500">Company</span
-            >
-          </p>
-        </div>
-      </div>
     </div>
+    <ul
+      role="list"
+      class="grid max-w-2xl grid-cols-1 gap-6 mx-auto mt-16 sm:gap-8 lg:mt-20 lg:max-w-none lg:grid-cols-3">
+      <li>
+        <ul role="list" class="flex flex-col gap-y-6 sm:gap-y-8">
+          <li>
+            <figure class="relative h-full p-6 bg-white rounded-3xl">
+              <blockquote class="relative">
+                <p class="text-base text-slate-500">
+                  Snowflake is a cloud data platform that enables data storage,
+                  processing, and analytics solutions for businesses and more.
+                </p>
+              </blockquote>
+              <figcaption
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                <div>
+                  <div
+                    class="text-lg font-semibold leading-6 text-black font-display">
+                    Annur Flint
+                  </div>
+                  <div class="mt-1 text-sm text-slate-500">
+                    CEO at Flint LLC
+                  </div>
+                </div>
+                <div class="overflow-hidden rounded-full bg-slate-50">
+                  <img
+                    alt=""
+                    src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                    width="56"
+                    height="56"
+                    decoding="async"
+                    data-nimg="future"
+                    class="object-cover h-14 w-14"
+                    loading="lazy"
+                    style="color: transparent"
+                  />
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="relative h-full p-6 bg-white rounded-3xl">
+              <blockquote class="relative">
+                <p class="text-base text-slate-500">
+                  With the Data Cloud platform, Snowflake manages the
+                  complexities of data storage infrastructure, enabling
+                  organizations.
+                </p>
+              </blockquote>
+              <figcaption
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                <div>
+                  <div
+                    class="text-lg font-semibold leading-6 text-black font-display">
+                    Jordan Pettersson
+                  </div>
+                  <div class="mt-1 text-sm text-slate-500">
+                    Director at Pettersson Industries
+                  </div>
+                </div>
+                <div class="overflow-hidden rounded-full bg-slate-50">
+                  <img
+                    alt=""
+                    src="https://images.unsplash.com/photo-1577202214328-c04b77cefb5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80"
+                    width="56"
+                    height="56"
+                    decoding="async"
+                    data-nimg="future"
+                    class="object-cover h-14 w-14"
+                    loading="lazy"
+                    style="color: transparent"
+                  />
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul role="list" class="flex flex-col gap-y-6 sm:gap-y-8">
+          <li>
+            <figure class="relative h-full p-6 bg-white rounded-3xl">
+              <blockquote class="relative">
+                <p class="text-base text-slate-500">
+                  Upswing securities passively index inverse bondholders
+                  capitalization financial health Moody's debt managed.
+                </p>
+              </blockquote>
+              <figcaption
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                <div>
+                  <div
+                    class="text-lg font-semibold leading-6 text-black font-display">
+                    Oliver Benji
+                  </div>
+                  <div class="mt-1 text-sm text-slate-500">
+                    Founder of Benji and Tom
+                  </div>
+                </div>
+                <div class="overflow-hidden rounded-full bg-slate-50">
+                  <img
+                    alt=""
+                    src="https://images.unsplash.com/photo-1624224971170-2f84fed5eb5e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1999&q=80"
+                    width="56"
+                    height="56"
+                    decoding="async"
+                    data-nimg="future"
+                    class="object-cover h-14 w-14"
+                    loading="lazy"
+                    style="color: transparent"
+                  />
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="relative h-full p-6 bg-white rounded-3xl">
+              <blockquote class="relative">
+                <p class="text-base text-slate-500">
+                  Receive bondholders called capitalization investment grade
+                  bonds bills management district stocks. Potential funds
+                  consulting.
+                </p>
+              </blockquote>
+              <figcaption
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                <div>
+                  <div
+                    class="text-lg font-semibold leading-6 text-black font-display">
+                    Messi Lionel
+                  </div>
+                  <div class="mt-1 text-sm text-slate-500">COO at Pff Inc</div>
+                </div>
+                <div class="overflow-hidden rounded-full bg-slate-50">
+                  <img
+                    alt=""
+                    src="https://images.unsplash.com/photo-1548142813-c348350df52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=989&q=80"
+                    width="56"
+                    height="56"
+                    decoding="async"
+                    data-nimg="future"
+                    class="object-cover h-14 w-14"
+                    loading="lazy"
+                    style="color: transparent"
+                  />
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul role="list" class="flex flex-col gap-y-6 sm:gap-y-8">
+          <li>
+            <figure class="relative h-full p-6 bg-white rounded-3xl">
+              <blockquote class="relative">
+                <p class="text-base text-slate-500">
+                  Debt bills lucrative capitalization municipal bonds government
+                  401k bear bull credit corporate bonds called NYSE finance.
+                </p>
+              </blockquote>
+              <figcaption
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                <div>
+                  <div
+                    class="text-lg font-semibold leading-6 text-black font-display">
+                    Melon Tusk
+                  </div>
+                  <div class="mt-1 text-sm text-slate-500">
+                    Founder of Fesla
+                  </div>
+                </div>
+                <div class="overflow-hidden rounded-full bg-slate-50">
+                  <img
+                    alt=""
+                    src="https://images.unsplash.com/photo-1602434228300-a645bce6891b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1639&q=80"
+                    width="56"
+                    height="56"
+                    decoding="async"
+                    data-nimg="future"
+                    class="object-cover h-14 w-14"
+                    loading="lazy"
+                    style="color: transparent"
+                  />
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="relative h-full p-6 bg-white rounded-3xl">
+              <blockquote class="relative">
+                <p class="text-base text-slate-500">
+                  Managed prices bondholders federal risk NASDAQ hedge fund
+                  expenses municipal bonds management, in the morning.
+                </p>
+              </blockquote>
+              <figcaption
+                class="relative flex items-center justify-between pt-6 mt-6 border-t border-slate-100">
+                <div>
+                  <div
+                    class="text-lg font-semibold leading-6 text-black font-display">
+                    Målgan
+                  </div>
+                  <div class="mt-1 text-sm text-slate-500">
+                    Director at Målagan AB
+                  </div>
+                </div>
+                <div class="overflow-hidden rounded-full bg-slate-50">
+                  <img
+                    alt=""
+                    src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                    width="56"
+                    height="56"
+                    decoding="async"
+                    data-nimg="future"
+                    class="object-cover h-14 w-14"
+                    loading="lazy"
+                    style="color: transparent"
+                  />
+                </div>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </div>
 </section>
