--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -1,91 +1,107 @@
 <section aria-labelledby="faq-title" id="faq">
   <div
-    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24">
-    <div class="max-w-2xl">
-      <p class="font-extrabold text-5xl text-black font-display">
-        Frequently asked questions
-      </p><p class="mt-4 text-gray-500 max-w-xl text-lg tracking-tight">
-        Let's find your answers.
-      </p>
-    </div><ul
-      class="mx-auto max-w-2xl gap-8 grid grid-cols-1 lg:grid-cols-3 lg:max-w-none mt-16"
-      role="list">
-      <li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          Why wouldn't I just hire a full-time designer?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          Sure, you could do that! Just consider this - the current salary of a
-          Senior Designer &amp; Developer is between 68k - 130k in the US.
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
+    <div>
+      <div class="max-w-2xl">
+        <p
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
+          Frequent questions and answers
         </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          When can we start?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          Within 24 hours. If we are a good fit and a spot is available, we can
-          immediately get started and you'll receive a solution for your first
-          request within 48 hours!
+        <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
+          Because we wonder all day around
         </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          How fast will I receive my deliveries?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          On average, most requests are completed in just two days or less.
-          However, more complex requests can take longer.
-        </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          Is Jamstacker an agency?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          Jamstacker is a One man Company. This means that you will work
-          directly with me, Michael Andreuzza.
-        </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          What if I need a task to be revised?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          No worries - you can ask for unlimited revisions. Since they are
-          usually "quick stuff" - expect them to be done in 24 hours!
-        </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          How can we communicate?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          We will communicate directly through Slack Channel. I typically
-          respond within a few hours, but at the latest within 24 hours during
-          Business days.
-        </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          Are requests really unlimited?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          Yes! Submit as many requests as you want.
-        </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          What if I don't like the deliveries?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          I offer a 7-day 100% Money-back-guarantee. This means you have enough
-          time to test out the service and see if we could be a good fit. You
-          can cancel your plan at any time, with the click of a button - no
-          contracts, no surprises.
-        </p>
-      </li><li>
-        <h3
-          class="text-lg font-medium leading-6 text-black font-display lg:text-2xl">
-          How do you guarantee full availability?
-        </h3><p class="mt-4 text-gray-500 text-sm">
-          I'm only taking up 3 clients at a time so I can deliver superb
-          quality. &zwj;
-        </p>
-      </li>
-    </ul>
+      </div>
+      <div class="mt-12 space-y-12 divide-y-2">
+        <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
+          <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
+            <span
+              class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
+              Lexingtøn Themes identified users on my account as unauthorized.
+              What should I do?
+            </span>
+          </div>
+          <div class="lg:col-span-2">
+            <p class="text-slate-500 text-sm">
+              If we got in touch with you about unauthorized charges and you
+              think we have made a mistake, we will gladly look into this for
+              you. We will have sent you a form that we need you to fill out in
+              order for Lexingtøn Themes to revisit your account. Please fill
+              out the verification form that was sent to you. Once you have
+              completed the verification, we will revisit your account and
+              follow up with you.
+            </p>
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
+          <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
+            <span
+              class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
+              I recently received a request for my photo ID. Why does Lexingtøn
+              Themes UI need this? What should I do next?
+            </span>
+          </div>
+          <div class="space-y-4 lg:col-span-2">
+            <p class="text-slate-500 text-sm">
+              Lexingtøn Themes is legally required to complete what is called a
+              KYC (Know Your Customer) Survey for every user that signs up,
+              which includes completing identity verification for the person who
+              chooses to be the owner, administrator, and representative of a
+              Lexingtøn Themes account. These requirements are intended to
+              promote transparency and prevent individuals from using complex
+              company structures to hide terrorist financing, money laundering,
+              tax evasion, and other financial crimes. Usually, we are able to
+              verify our users' identities automatically, but once in a while we
+              are unable to and have to reach out for more information.
+            </p>
+            <p class="text-slate-500 text-sm">
+              If you have not yet done so, visit the Verifications section of
+              your Dashboard to upload your photo ID in your dashboard.
+            </p>
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
+          <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
+            <span
+              class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
+              Why has Lexingtøn Themes placed a reserve on my new account?
+            </span>
+          </div>
+          <div class="lg:col-span-2">
+            <p class="text-slate-500 text-sm">
+              Reserves are utilized to keep processing volume available within
+              your Lexingtøn Themes account to fund refunds or chargebacks.
+              There are several possible reasons a reserve may be placed at
+              onboarding. It could be that your business operates in an industry
+              or with a business model that potentially creates additional
+              credit risk, even if you are not yet receiving chargebacks. Some
+              businesses may also collect payment far in advance, creating
+              additional risk. Most reserves are temporary, however, and we are
+              happy to revisit if you provide additional information by replying
+              to the notification email you received.
+            </p>
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
+          <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
+            <span
+              class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
+              I just opened a new account but Lexingtøn Themes told me I cannot
+              process payments yet.
+            </span>
+          </div>
+          <div class="lg:col-span-2">
+            <p class="text-slate-500 text-sm">
+              We know how important it is to be able to accept transactions and
+              payouts quickly in order for a business to continue running
+              smoothly. Lexingtøn Themes is currently reviewing your submitted
+              details so that we have a full understanding of your business.
+              Unless we have requested more information, there is no action for
+              you to take, and we will do our best to wrap our routine review up
+              so you can get up and running.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
