--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,192 +1,75 @@
-<section class="bg-white relative">
-  <svg
-    class="absolute w-full opacity-50"
-    viewBox="0 0 960 637"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg">
-    <g filter="url(#filter0_f_1_167)">
-      <ellipse
-        cx="479.5"
-        cy="318.5"
-        rx="118.5"
-        ry="118.5"
-        transform="rotate(-90 479.5 318.5)"
-        fill="#00000020"
-        fill-opacity="0.5"></ellipse>
-    </g>
-    <mask
-      id="mask0_1_167"
-      style="mask-type:alpha"
-      maskUnits="userSpaceOnUse"
-      x="0"
-      y="32"
-      width="960"
-      height="573">
-      <rect y="32" width="960" height="573" fill="url(#paint0_radial_1_167)"
-      ></rect>
-    </mask>
-    <g mask="url(#mask0_1_167)">
-      <rect x="123.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect x="202.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect x="281.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect x="360.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect x="439.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect x="518.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect
-        x="597.5"
-        y="41.5"
-        width="79"
-        height="79"
-        fill="white"
-        fill-opacity="0.25"
-        stroke="black"></rect>
-      <rect x="676.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect x="755.5" y="41.5" width="79" height="79" stroke="black"></rect>
-      <rect x="123.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="202.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="281.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="360.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="439.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="518.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="597.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="676.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="755.5" y="120.5" width="79" height="79" stroke="black"></rect>
-      <rect x="123.5" y="199.5" width="79" height="79" stroke="black"></rect>
-      <rect x="202.5" y="199.5" width="79" height="79" stroke="black"></rect>
-      <rect x="281.5" y="199.5" width="79" height="79" stroke="black"></rect>
-      <rect x="360.5" y="199.5" width="79" height="79" stroke="black"></rect>
-      <rect
-        x="439.5"
-        y="199.5"
-        width="79"
-        height="79"
-        fill="white"
-        fill-opacity="0.25"
-        stroke="black"></rect>
-      <rect x="518.5" y="199.5" width="79" height="79" stroke="black"></rect>
-      <rect
-        x="597.5"
-        y="199.5"
-        width="79"
-        height="79"
-        fill="white"
-        fill-opacity="0.25"
-        stroke="black"></rect>
-      <rect x="676.5" y="199.5" width="79" height="79" stroke="black"></rect>
-      <rect x="755.5" y="199.5" width="79" height="79" stroke="black"></rect>
-      <rect x="123.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="202.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="281.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="360.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="439.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="518.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="597.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="676.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="755.5" y="278.5" width="79" height="79" stroke="black"></rect>
-      <rect x="123.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect x="202.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect x="281.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect
-        x="360.5"
-        y="357.5"
-        width="79"
-        height="79"
-        fill="white"
-        fill-opacity="0.25"
-        stroke="black"></rect>
-      <rect x="439.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect x="518.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect x="597.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect x="676.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect x="755.5" y="357.5" width="79" height="79" stroke="black"></rect>
-      <rect x="123.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="202.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="281.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="360.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="439.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="518.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="597.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="676.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="755.5" y="436.5" width="79" height="79" stroke="black"></rect>
-      <rect x="123.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="202.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="281.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="360.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="439.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="518.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="597.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="676.5" y="515.5" width="79" height="79" stroke="black"></rect>
-      <rect x="755.5" y="515.5" width="79" height="79" stroke="black"></rect>
-    </g>
-    <defs>
-      <filter
-        id="filter0_f_1_167"
-        x="161"
-        y="1.14441e-05"
-        width="637"
-        height="637"
-        filterUnits="userSpaceOnUse"
-        color-interpolation-filters="sRGB">
-        <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
-        <feBlend
-          mode="normal"
-          in="SourceGraphic"
-          in2="BackgroundImageFix"
-          result="shape"></feBlend>
-        <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_1_167"
-        ></feGaussianBlur>
-      </filter>
-      <radialGradient
-        id="paint0_radial_1_167"
-        cx="0"
-        cy="0"
-        r="1"
-        gradientUnits="userSpaceOnUse"
-        gradientTransform="translate(480 318.5) rotate(90) scale(353.19 591.732)">
-        <stop stop-color="#D9D9D9" stop-opacity="0.2"></stop>
-        <stop offset="0.802083" stop-color="#D9D9D9" stop-opacity="0"></stop>
-      </radialGradient>
-    </defs>
-  </svg>
-
+<section>
   <div
-    class="mx-auto w-full lg:px-16 relative max-w-7xl md:px-12 items-center px-8 pt-36">
-    <div class="mx-auto text-center max-w-4xl p-10">
-      <div>
-        <p class="font-extrabold text-5xl text-black font-display">
-          An Astro and Tailwind CSS starter template for your newest SaaS
-        </p><p
-          class="mx-auto max-w-xl mt-4 text-lg text-gray-500 tracking-tight">
-          If you could kick the person in the pants responsible for most of your
-          trouble, you wouldn't sit for a month
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
+    <div>
+      <div class="text-center max-w-4xl mx-auto">
+        <p
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
+          A starter template built with Astro and Tailwind CSS for your newest
+          project.
         </p>
-      </div><div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
+        <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
+          Putting together a directory website was a challenge. Superstash lets
+          you focus on the content and makes the entire process effortless.
+        </p>
+      </div>
+      <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
           class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-          href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
+          href="https://lexingtonthemes.com"
+          >Lexington Themes
+        </a>
+        <a
+          class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full"
+          href="https://github.com/michael-andreuzza/astrosaas"
+          >GitHub &nbsp; &rarr;</a
         >
       </div>
-    </div>
-  </div>
-  <div class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8">
-    <div>
-      <img alt="dashboard" class="w-full" src="/dashboard.png" />
-    </div>
-    <div class="mx-auto pt-12 lg:py-16">
-      <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-        <div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Figma.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Canva.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Stripe.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Gitlab.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Linear.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" class="max-h-12" src="/Gumroad.svg" />
+      <dl
+        class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
+        <div class="text-slate-500">
+          <strong class="text-slate-700"
+            >Astro, Tailwind CSS and Alpine.js</strong
+          > ━ This are the popular technologies behind Astrosaas.
         </div>
+        <div class="text-slate-500">
+          <strong class="text-slate-700">Includes 6 pages</strong> ━ You will find
+          this landing, faq, terms,privacy,sign up and sign in pages.
+        </div>
+        <div class="text-slate-500">
+          <strong class="text-slate-700">Different section</strong> ━ The starter
+          includes different feature sections, a pricing table, testmionial, CTA
+          and full forms. more.
+        </div>
+      </dl>
+    </div>
+    <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
+      <div class="bg-slate-100 p-8 rounded-3xl" style="">
+        <img
+          alt=""
+          class="relative w-full border lg:rounded-2xl object-cover rounded shadow-2xl"
+          src="https://linear.app/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Fhero%404x.15e3a396.jpg&w=3840&q=75"
+        />
+      </div>
+    </div>
+    <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
+      <div class="flex justify-center col-span-1 px-8">
+        <img alt="logo" class="max-h-12" src="/Figma.svg" />
+      </div>
+      <div class="flex justify-center col-span-1 px-8">
+        <img alt="logo" class="max-h-12" src="/Canva.svg" />
+      </div>
+      <div class="flex justify-center col-span-1 px-8">
+        <img alt="logo" class="max-h-12" src="/Stripe.svg" />
+      </div>
+      <div class="flex justify-center col-span-1 px-8">
+        <img alt="logo" class="max-h-12" src="/Gitlab.svg" />
+      </div>
+      <div class="flex justify-center col-span-1 px-8">
+        <img alt="logo" class="max-h-12" src="/Linear.svg" />
+      </div>
+      <div class="flex justify-center col-span-1 px-8">
+        <img alt="logo" class="max-h-12" src="/Gumroad.svg" />
       </div>
     </div>
   </div>
