--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -1,21 +1,20 @@
 <section aria-labelledby="pricing" id="pricing">
   <div class="lg:px-16 max-w-7xl md:px-12 mx-auto px-8 py-24 scroll-mt-12">
-    <div class="sm:text-center">
-      <p class="font-extrabold text-5xl text-black font-display"></p>
+    <div class="text-center">
       <h2
-        class="mt-6 text-4xl font-extrabold text-black font-display lg:mx-auto">
+        class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
         Always know what you’ll pay,
 
         <span class="lg:block"> transparent pricing for everyone.</span>
       </h2>
     </div>
   </div>
-  <div class="items-center px-8 pt-12 pb-24 mx-auto max-w-7xl">
+  <div class="items-center px-8 lg:pt-12 pb-24 mx-auto max-w-7xl lg:px-16">
     <div
-      class="grid max-w-2xl grid-cols-1 py-4 mt-16 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-gray-100 lg:rounded-3xl">
-      <section class="flex flex-col px-6 rounded-3xl sm:px-8 lg:py-8">
+      class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-slate-50 lg:border border-slate-500/10 lg:rounded-3xl">
+      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
         <h3 class="mt-5 text-lg text-black font-display">Greedy</h3>
-        <p class="mt-2 text-sm text-gray-500">
+        <p class="mt-2 text-sm text-slate-500">
           Amazing for those attached to money with glue
         </p>
         <p
@@ -24,7 +23,7 @@
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -39,7 +38,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"
-            /><span class="ml-4">Connect up to 1 bank accounts</span>
+            /><span class="ml-4"> 1 bank accounts</span>
           </li>
           <li class="flex items-center">
             <ion-icon
@@ -64,9 +63,9 @@
           href="/register">Get started</a
         >
       </section>
-      <section class="flex flex-col px-6 rounded-3xl sm:px-8 lg:py-8">
+      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
         <h3 class="mt-5 text-lg text-black font-display">Wannabe</h3>
-        <p class="mt-2 text-sm text-gray-500">
+        <p class="mt-2 text-sm text-slate-500">
           Good for those trying to get there, but are too far from it.
         </p>
         <p
@@ -75,7 +74,7 @@
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -90,7 +89,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"
-            /><span class="ml-4">Connect up to 2 bank accounts</span>
+            /><span class="ml-4"> 2 bank accounts</span>
           </li>
           <li class="flex items-center">
             <ion-icon
@@ -114,7 +113,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"
-            /><span class="ml-4">Export up to 3 months data</span>
+            /><span class="ml-4"> 3 months data</span>
           </li>
         </ul>
         <a
@@ -150,7 +149,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"
-            /><span class="ml-4">Connect up to 5 bank accounts</span>
+            /><span class="ml-4"> 5 bank accounts</span>
           </li>
           <li class="flex items-center">
             <ion-icon
@@ -174,7 +173,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"
-            /><span class="ml-4">Export up to 12 months data</span>
+            /><span class="ml-4"> 12 months data</span>
           </li>
           <li class="flex items-center">
             <ion-icon
@@ -199,9 +198,9 @@
           href="/register">Get started</a
         >
       </section>
-      <section class="flex flex-col px-6 rounded-3xl sm:px-8 lg:py-8">
+      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
         <h3 class="mt-5 text-lg text-black font-display">Big fish</h3>
-        <p class="mt-2 text-sm text-gray-500">
+        <p class="mt-2 text-sm text-slate-500">
           For even the biggest enterprise companies.
         </p>
         <p
@@ -210,7 +209,7 @@
         </p>
         <ul
           role="list"
-          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3">
+          class="flex flex-col order-last mt-10 text-sm text-slate-600 gap-y-3">
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
@@ -225,7 +224,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"
-            /><span class="ml-4">Connect up to 15 bank accounts</span>
+            /><span class="ml-4"> 15 bank accounts</span>
           </li>
           <li class="flex items-center">
             <ion-icon
@@ -249,7 +248,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"
-            /><span class="ml-4">Export up to 24 months data</span>
+            /><span class="ml-4"> 24 months data</span>
           </li>
         </ul>
         <a
