--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -1,24 +1,27 @@
-<section class="bg-white">
+<section>
   <div
-    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24">
-    <div class="mx-auto max-w-2xl lg:p-10 lg:text-center">
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
+    <div class="mx-auto max-w-3xl lg:text-center">
       <div>
-        <p class="font-extrabold text-5xl text-black font-display">
-          I am a slightly longer heading than the others
-        </p><p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500">
+        <p
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
+          I am a slightly longer <span class="lg:block"
+            >heading than the others
+          </span>
+        </p><p
+          class="mt-4 text-lg max-w-xl tracking-tight text-slate-500 mx-auto">
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
       </div>
-    </div><div class="items-center w-full">
-      <img alt="" class="rounded-3xl w-full" src="/dashboard2.png" />
-    </div><div class="mx-auto pt-12">
+    </div>
+    <div class="mx-auto pt-12">
       <div
         class="mx-auto w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
         <div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12">
+              class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -26,17 +29,17 @@
                 role="img"
               />
             </div><p
-              class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl lg:mt-0">
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Developer experience
             </p>
-          </div><p class="text-gray-500 text-sm mt-4">
-            I am so happy, my dear friend, so absorbed in the exquisite sense of
-            mere tranquil existence, that I neglect my talents.
+          </div><p class="text-slate-500 text-sm mt-4">
+            Everything I build is keyboard accessible, and I meticulously write
+            the markup to deliver the best screenreader experience.
           </p>
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12">
+              class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -44,17 +47,17 @@
                 role="img"
               />
             </div><p
-              class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl lg:mt-0">
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Designers go-to app
             </p>
-          </div><p class="text-gray-500 text-sm mt-4">
-            I am so happy, my dear friend, so absorbed in the exquisite sense of
-            mere tranquil existence, that I neglect my talents.
+          </div><p class="text-slate-500 text-sm mt-4">
+            I tested the template in the latest versions of all browsers to
+            handle lots of edge-cases you might encounter.
           </p>
         </div><div>
           <div class="gap-3 lg:inline-flex lg:items-center">
             <div
-              class="items-center justify-center text-black bg-gray-100 rounded-xl flex h-12 w-12">
+              class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10">
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
@@ -62,12 +65,12 @@
                 role="img"
               />
             </div><p
-              class="mt-4 text-lg font-medium leading-6 text-black font-display lg:text-2xl lg:mt-0">
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
               Easy onboarding
             </p>
-          </div><p class="text-gray-500 text-sm mt-4">
-            I am so happy, my dear friend, so absorbed in the exquisite sense of
-            mere tranquil existence, that I neglect my talents.
+          </div><p class="text-slate-500 text-sm mt-4">
+            The template is ready for production and can be deployed anywhere
+            static websites can, such as Vercel, Netlify, or GitHub Pages,..
           </p>
         </div>
       </div>
