--- a/src/components/Forms/Signup.astro
+++ b/src/components/Forms/Signup.astro
@@ -1,27 +1,8 @@
 <section>
   <div
     class="flex relative justify-center lg:px-0 max-h-full md:px-12 overflow-hidden">
-    <div class="bg-white hidden lg:block lg:flex-1 lg:relative sm:contents">
-      <div
-        class="w-full absolute bg-white h-full inset-0 object-cover"
-        data-nimg="future"
-        decoding="async"
-        height="1866"
-        loading="lazy"
-        width="1664">
-        <video
-          autoplay=""
-          class="bg-white absolute max-w-none min-h-full min-w-full w-auto z-10"
-          loop=""
-          muted=""
-          ><source
-            src="https://d33wubrfki0l68.cloudfront.net/c906151c5417ee08cea5c68bc4c8823316ba100c/3fe8e/images/desktopgradient.mp4"
-            type="video/mp4"
-          />Your browser does not support the video tag.</video
-        >
-      </div>
-    </div><div
-      class="bg-white px-4 relative flex flex-1 flex-col h-screen lg:py-24 md:flex-none md:px-28 py-10 shadow-2xl sm:justify-center xl:py-36 z-10">
+    <div
+      class="bg-white px-4 relative flex flex-1 flex-col h-screen lg:py-24 md:flex-none md:px-28 py-10 sm:justify-center xl:py-36 z-10">
       <div
         class="w-full lg:h-full max-w-md md:max-w-sm md:px-0 md:w-96 mx-auto sm:px-4">
         <div class="flex flex-col">
@@ -32,7 +13,7 @@
             </h2><div class="py-3">
               <span class="w-full inline-flex relative mt-3 z-0"
                 ><button
-                  class="w-full focus:outline-none border py-3 bg-white border-gray-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:z-10 font-medium hover:bg-gray-50 inline-flex items-center justify-center px-4 relative rounded-xl text-gray-700 text-sm"
+                  class="w-full focus:outline-none border py-3 bg-white border-slate-300 focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 focus:z-10 font-medium hover:bg-slate-50 inline-flex items-center justify-center px-4 relative rounded-xl text-slate-700 text-sm"
                   type="button"
                   ><span>Sign up with</span>
                   <span class="ml-3"
@@ -58,9 +39,9 @@
                 <div
                   class="flex absolute inset-0 items-center"
                   aria-hidden="true">
-                  <div class="w-full border-t border-gray-300"></div>
+                  <div class="w-full border-t border-slate-300"></div>
                 </div><div class="flex relative justify-center">
-                  <span class="bg-white text-sm px-2 text-gray-500"
+                  <span class="bg-white text-sm px-2 text-slate-500"
                     >Or continue with</span
                   >
                 </div>
@@ -76,7 +57,7 @@
               <div class="w-full">
                 <label class="sr-only" for="first_name">First name</label>
                 <input
-                  class="w-full focus:outline-none border py-3 appearance-none bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                  class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
                   id="first_name"
                   name="first_name"
                   autocomplete="given-name"
@@ -84,7 +65,7 @@
                 />
               </div><div class="w-full">
                 <label class="sr-only" for="last_name">Last name</label><input
-                  class="w-full focus:outline-none border py-3 appearance-none bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                  class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
                   id="last_name"
                   name="last_name"
                   autocomplete="family-name"
@@ -96,13 +77,13 @@
                 >User name or email Adress</label
               >
               <input
-                class="w-full focus:outline-none border py-3 appearance-none bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type here..."
               />
             </div><div class="col-span-full">
               <label class="sr-only" name="company">Password</label>
               <input
-                class="w-full focus:outline-none border py-3 appearance-none bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
+                class="w-full focus:outline-none border py-3 appearance-none bg-slate-50 block border-slate-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-slate-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type password here..."
                 type="password"
               />
@@ -115,7 +96,7 @@
                   type="checkbox"
                 />
                 <label
-                  class="font-medium text-xs block leading-tight ml-2 text-gray-500"
+                  class="font-medium text-xs block leading-tight ml-2 text-slate-500"
                   for="remember-me"
                   >Creating an account means you’re okay with our <a
                     class="text-accent-500 hover:text-accent-400"
@@ -142,7 +123,7 @@
                   class="text-accent-500 hover:text-accent-400 ml-3"
                   href="/login">Sign in</a
                 >
-              </p><p class="font-medium text-xs leading-tight text-gray-500">
+              </p><p class="font-medium text-xs leading-tight text-slate-500">
                 This site is protected by reCAPTCHA and the Google Privacy
                 Policy and Terms of Service apply.
               </p>
