--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -1,25 +1,36 @@
-<section>
-  <div class="lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24 mx-auto">
-    <div
-      class="border p-10 bg-black rounded-3xl mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-12">
-      <div
-        class="grid grid-cols-1 lg:grid-cols-3 justify-between w-full items-center">
-        <div class="lg:col-span-2">
-          <p
-            class="font-extrabold text-5xl lg:text-7xl text-white font-display">
-            Start your free trial
-          </p>
-          <p class="mt-4 text-white text-lg tracking-tight">
-            Join over 4,000+ startups already growing with Untitled.
+<section
+  class="relative mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24 "
+  id="bundle"
+  aria-label="bundle">
+  <div class="bg-black rounded-3xl overflow-hidden mx-auto">
+    <div class="relative px-4 py-12 mx-auto max-w-7xl sm:px-6 md:px-4">
+      <div class="grid items-end text-center">
+        <div>
+          <span class="text-white"> Lexington Themes</span>
+          <h2
+            class="w-full mt-4 text-4xl font-semibold tracking-tight text-white font-display lg:text-5xl">
+            UI Kit's &amp; <span class="lg:block">Tailwind themes.</span>
+          </h2>
+          <p class="max-w-xl mx-auto mt-8 text-white/80 lg:text-xl">
+            For designers, developers, businesses &amp; personal use —
+            Beautifully designed HTML, Astro.js and Tailwind templates! Save
+            months of time and build your startup landing page in minutes.
           </p>
         </div>
-        <div class="lg:ml-auto">
+        <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
           <a
-            class="items-center justify-center rounded-xl focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-white hover:bg-transparent hover:border-white hover:text-white lg:w-auto px-6 py-3 text-center text-black font-medium w-full"
-            href="#">Learn more</a
+            class="items-center justify-center font-medium rounded-xl text-black focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-black hover:bg-transparent hover:border-white hover:text-white lg:w-auto px-6 py-3 text-center w-full"
+            href="https://lexingtonthemes.com/">
+            Browse templates
+          </a>
+          <a
+            class="items-center justify-center font-medium rounded-xl focus-visible:outline-white focus:outline-none inline-flex duration-200 text-white lg:w-auto px-6 py-3 text-center text-white/80 w-full"
+            href="https://lexingtonthemes.com/pricing"
+            >Get the bundle for $199</a
           >
         </div>
       </div>
     </div>
+    <img class="" src="./lexington.png" alt="" />
   </div>
 </section>
