--- a/src/components/infopages/Terms.astro
+++ b/src/components/infopages/Terms.astro
@@ -1,18 +1,20 @@
 <section>
-  <main class="py-[5.75rem]">
-    <div class="px-8 sm:px-6 lg:px-8">
+  <div
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
+    <div>
       <div class="relative mx-auto max-w-[40rem] pt-20 pb-24">
-        <h1 class="font-extrabold text-5xl text-black font-display">
+        <h1
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
           Terms and conditions
         </h1>
-        <p class="mt-4 text-base leading-7 text-gray-500">
+        <p class="mt-4 text-base leading-7 text-slate-500">
           Last updated on January 01, 2023
         </p>
       </div>
     </div>
-    <div class="relative px-8 sm:px-6 lg:px-8">
+    <div>
       <div
-        class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
+        class="mx-auto max-w-[40rem] prose-base prose text-slate-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
         <p>
           This privacy policy sets out how Unwrapped AB collects, processes and
           uses your Personal Information through your use of our Services.
@@ -168,5 +170,5 @@
         </p>
       </div>
     </div>
-  </main>
+  </div>
 </section>
