--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,11 +1,15 @@
 <section id="features">
   <div
-    class="mx-auto w-full lg:px-16 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
-    <div class="mx-auto max-w-2xl lg:p-10 lg:text-center">
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
+    <div class="mx-auto max-w-2xl text-center">
       <div>
-        <p class="font-extrabold text-5xl text-black font-display">
-          I am a slightly longer heading than the others
-        </p><p class="mt-4 text-lg max-w-xl tracking-tight text-gray-500">
+        <p
+          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
+          I am a slightly longer <span class="lg:block"
+            >heading than the others
+          </span>
+        </p><p
+          class="mt-4 text-lg max-w-xl mx-auto tracking-tight text-slate-500">
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
@@ -15,79 +19,77 @@
       <div class="mx-auto max-w-7xl pt-12">
         <h2 class="sr-only">Features.</h2><div>
           <div
-            class="grid gap-12 grid-cols-2 lg:space-y-0 lg:text-center md:grid-cols-3">
+            class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3">
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
-                    class="hydrated md h-5 w-5"
+                    class="hydrated md h-4 w-4"
                     name="scan-outline"
                     role="img"
                   />
                 </div><p
-                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Built with Astro.js.
                 </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
+              </div><div class="mt-4 text-slate-500 text-sm">
                 Astro is an all-in-one web framework for building fast,
                 content-focused websites.
               </div>
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
-                    class="hydrated md h-5 w-5"
+                    class="hydrated md h-4 w-4"
                     name="scan-outline"
                     role="img"
                   />
                 </div><p
-                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Styled with Tailwind CSS.
                 </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                Tailwind CSS works by scanning all of your HTML files,
-                JavaScript components, and any other templates for class names,
-                generating the corresponding styles and then writing them to a
-                static CSS file.
+              </div><div class="mt-4 text-slate-500 text-sm">
+                Tailwind CSS generates styles by searching for class names in
+                HTML, JavaScript, and templates, and then outputs them in a
+                single CSS file.
               </div>
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
-                    class="hydrated md h-5 w-5"
+                    class="hydrated md h-4 w-4"
                     name="scan-outline"
                     role="img"
                   />
                 </div><p
-                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Relived with Alpine.js
                 </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                Alpine is a rugged, minimal tool for composing behavior directly
-                in your markup. Think of it like jQuery for the modern web. Plop
-                in a script tag and get going.
+              </div><div class="mt-4 text-slate-500 text-sm">
+                Alpine is a rugged, minimal tool for for adding behavior to your
+                markup, similar to jQuery but for the modern web.
               </div>
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
-                    class="hydrated md h-5 w-5"
+                    class="hydrated md h-4 w-4"
                     name="scan-outline"
                     role="img"
                   />
                 </div><p
-                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Keyboard accessible.
                 </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
+              </div><div class="mt-4 text-slate-500 text-sm">
                 Everything I build is keyboard accessible, and I meticulously
                 write the markup to deliver the best screenreader experience I
                 can provide.
@@ -95,39 +97,39 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
-                    class="hydrated md h-5 w-5"
+                    class="hydrated md h-4 w-4"
                     name="scan-outline"
                     role="img"
                   />
                 </div><p
-                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Production-ready
                 </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
+              </div><div class="mt-4 text-slate-500 text-sm">
                 I tested the template in the latest versions of all browsers to
                 handle lots of edge-cases you might encounter.
               </div>
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-12 w-12 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-slate-100 rounded-xl flex h-10 w-10 lg:mx-auto">
                   <ion-icon
                     aria-label="scan outline"
-                    class="hydrated md h-5 w-5"
+                    class="hydrated md h-4 w-4"
                     name="scan-outline"
                     role="img"
                   />
                 </div><p
-                  class="mt-8 text-lg font-medium leading-6 text-black font-display lg:text-2xl">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
                   Simple deploys
                 </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                The template is production-ready and easily deployed anywhere
-                that you can deploy a static wbsites, like Vercel, Netlify,
-                GitHub pages, a bounch of options..
+              </div><div class="mt-4 text-slate-500 text-sm">
+                The template is ready for production and can be deployed
+                anywhere static websites can, such as Vercel, Netlify, or GitHub
+                Pages, and more.
               </div>
             </div>
           </div>
